# Jogo_Simulador_Organismos

./: .gitignore  CMakeLists.txt  LE-ME.md  instalar_linux_unix.sh  instalar_windows.bat
include/: Ambiente.h  EvolucaoArvore.h  Jogo.h  Organismo.h  Simulacao.h  UI.h  Utilitarios.h
src/: Ambiente.cpp  EvolucaoArvore.cpp  Jogo.cpp  Organismo.cpp  Simulacao.cpp  UI.cpp  Utilitarios.cpp  main.cpp
